@@ -10,6 +10,9 @@ Change log for hexer, the multi-view binary editor
 	  our own strerror() function if needed
 	- clean up the header files:
 	  - remove "extern" before the function prototypes
+	- clean up the source files:
+	  - remove the "extern" definitions for the standard C library
+	    functions - just include the header files instead
 	- clean up the Makefile:
 	  - allow the user to override most of the variables
 	  - no need to ignore the result of "rm -f" :)
